cs2210/proj3_16/y.output
   0  $accept : Program $end

   1  Program : PROGRAMnum IDnum SEMInum ClassDecl_rec

   2  ClassDecl_rec : ClassDecl
   3                | ClassDecl_rec ClassDecl

   4  ClassDecl : CLASSnum IDnum ClassBody

   5  ClassBody : LBRACEnum Decls MethodDecl_List RBRACEnum

   6  MethodDecl_List : MethodDecl_z1
   7                  | MethodDecl_List MethodDecl

   8  MethodDecl_z1 :
   9                | MethodDecl

  10  MethodDecl : METHODnum Type IDnum LPARENnum Formal_Parameter_List RPARENnum Block

  11  $$1 :

  12  MethodDecl : METHODnum VOIDnum $$1 IDnum LPARENnum Formal_Parameter_List RPARENnum Block

  13  Type : IDnum Type_rec
  14       | INTnum Type_rec
  15       | IDnum Type_rec DOTnum Type
  16       | INTnum Type_rec DOTnum Type

  17  Type_rec :
  18           | LBRACnum RBRACnum
  19           | Type_rec LBRACnum RBRACnum

  20  Formal_Parameter_List :
  21                        | Formal_Parameter_List_rec

  22  Formal_Parameter_List_rec : Formal_Parameter
  23                            | Formal_Parameter SEMInum Formal_Parameter_List_rec

  24  $$2 :

  25  Formal_Parameter : VALnum $$2 INTnum Formal_Parameter_rec

  26  $$3 :

  27  Formal_Parameter : INTnum $$3 Formal_Parameter_rec

  28  Formal_Parameter_rec : IDnum
  29                       | IDnum COMMAnum Formal_Parameter_rec

  30  Block : StatementList
  31        | Decls StatementList

  32  StatementList : LBRACEnum StatementList_rec RBRACEnum

  33  StatementList_rec : Statement
  34                    | StatementList_rec SEMInum Statement

  35  Statement :
  36            | AssignmentStatement
  37            | MethodCallStatement
  38            | ReturnStatement
  39            | IfStatement
  40            | WhileStatement

  41  Decls :
  42        | DECLARATIONSnum FieldDecl_List ENDDECLARATIONSnum

  43  FieldDecl_List :
  44                 | FieldDecl
  45                 | FieldDecl_List FieldDecl

  46  FieldDecl : Type FieldDecl_rec SEMInum

  47  FieldDecl_rec : FieldDecl_Id
  48                | FieldDecl_rec COMMAnum FieldDecl_Id

  49  FieldDecl_Id : VariableDeclId
  50               | VariableDeclId EQUALnum VariableInitializer

  51  VariableDeclId : IDnum
  52                 | IDnum BracketLoop

  53  BracketLoop : LBRACnum RBRACnum
  54              | BracketLoop LBRACnum RBRACnum

  55  VariableInitializer : Expression
  56                      | ArrayInitializer
  57                      | ArrayCreationExpression

  58  ArrayInitializer : LBRACEnum ArrayInitializer_rec RBRACEnum

  59  ArrayInitializer_rec : Expression
  60                       | ArrayInitializer_rec COMMAnum Expression

  61  ArrayCreationExpression : INTnum ArrayCreationExpression_rec

  62  ArrayCreationExpression_rec : ArrayExpression
  63                              | ArrayCreationExpression_rec ArrayExpression

  64  ArrayExpression : LBRACnum Expression RBRACnum

  65  AssignmentStatement : Variable ASSGNnum Expression

  66  MethodCallStatement : Variable LPARENnum ParameterList RPARENnum

  67  ParameterList :
  68                | Expression
  69                | Expression COMMAnum ParameterList

  70  ReturnStatement : RETURNnum
  71                  | RETURNnum Expression

  72  IfStatement : IFnum Expression StatementList
  73              | IFnum Expression StatementList ELSEnum StatementList
  74              | IFnum Expression StatementList ELSEnum IfStatement

  75  WhileStatement : WHILEnum Expression StatementList

  76  Expression : SimpleExpression
  77             | SimpleExpression LTnum SimpleExpression
  78             | SimpleExpression LEnum SimpleExpression
  79             | SimpleExpression EQnum SimpleExpression
  80             | SimpleExpression NEnum SimpleExpression
  81             | SimpleExpression GEnum SimpleExpression
  82             | SimpleExpression GTnum SimpleExpression

  83  Factor : UnsignedConstant
  84         | Variable
  85         | MethodCallStatement
  86         | LPARENnum Expression RPARENnum
  87         | NOTnum Factor

  88  UnsignedConstant : ICONSTnum
  89                   | SCONSTnum

  90  SimpleExpression : Term SimpleExpression_Op_rec
  91                   | PLUSnum Term SimpleExpression_Op_rec
  92                   | MINUSnum Term SimpleExpression_Op_rec

  93  SimpleExpression_Op_rec :
  94                          | SimpleExpression_Op SimpleExpression_Op_rec

  95  SimpleExpression_Op : PLUSnum Term
  96                      | MINUSnum Term
  97                      | ORnum Term

  98  Term : Factor Term_Op_rec

  99  Term_Op_rec :
 100              | Term_Op Term_Op_rec

 101  Term_Op : TIMESnum Factor
 102          | DIVIDEnum Factor
 103          | ANDnum Factor

 104  Variable : IDnum Variable_rec

 105  Variable_rec :
 106               | Index Variable_rec
 107               | Field Variable_rec

 108  Field : DOTnum IDnum

 109  Index : LBRACnum Index_rec RBRACnum

 110  Index_rec : Expression
 111            | Expression COMMAnum Index_rec

state 0
	$accept : . Program $end  (0)

	PROGRAMnum  shift 1
	.  error

	Program  goto 2


state 1
	Program : PROGRAMnum . IDnum SEMInum ClassDecl_rec  (1)

	IDnum  shift 3
	.  error


state 2
	$accept : Program . $end  (0)

	$end  accept


state 3
	Program : PROGRAMnum IDnum . SEMInum ClassDecl_rec  (1)

	SEMInum  shift 4
	.  error


state 4
	Program : PROGRAMnum IDnum SEMInum . ClassDecl_rec  (1)

	CLASSnum  shift 5
	.  error

	ClassDecl_rec  goto 6
	ClassDecl  goto 7


state 5
	ClassDecl : CLASSnum . IDnum ClassBody  (4)

	IDnum  shift 8
	.  error


state 6
	Program : PROGRAMnum IDnum SEMInum ClassDecl_rec .  (1)
	ClassDecl_rec : ClassDecl_rec . ClassDecl  (3)

	CLASSnum  shift 5
	$end  reduce 1

	ClassDecl  goto 9


state 7
	ClassDecl_rec : ClassDecl .  (2)

	.  reduce 2


state 8
	ClassDecl : CLASSnum IDnum . ClassBody  (4)

	LBRACEnum  shift 10
	.  error

	ClassBody  goto 11


state 9
	ClassDecl_rec : ClassDecl_rec ClassDecl .  (3)

	.  reduce 3


state 10
	ClassBody : LBRACEnum . Decls MethodDecl_List RBRACEnum  (5)
	Decls : .  (41)

	DECLARATIONSnum  shift 12
	RBRACEnum  reduce 41
	METHODnum  reduce 41

	Decls  goto 13


state 11
	ClassDecl : CLASSnum IDnum ClassBody .  (4)

	.  reduce 4


12: shift/reduce conflict (shift 14, reduce 43) on IDnum
12: shift/reduce conflict (shift 15, reduce 43) on INTnum
state 12
	Decls : DECLARATIONSnum . FieldDecl_List ENDDECLARATIONSnum  (42)
	FieldDecl_List : .  (43)

	IDnum  shift 14
	INTnum  shift 15
	ENDDECLARATIONSnum  reduce 43

	Type  goto 16
	FieldDecl_List  goto 17
	FieldDecl  goto 18


13: shift/reduce conflict (shift 19, reduce 8) on METHODnum
state 13
	ClassBody : LBRACEnum Decls . MethodDecl_List RBRACEnum  (5)
	MethodDecl_z1 : .  (8)

	METHODnum  shift 19
	RBRACEnum  reduce 8

	MethodDecl_List  goto 20
	MethodDecl_z1  goto 21
	MethodDecl  goto 22


14: shift/reduce conflict (shift 23, reduce 17) on LBRACnum
state 14
	Type : IDnum . Type_rec  (13)
	Type : IDnum . Type_rec DOTnum Type  (15)
	Type_rec : .  (17)

	LBRACnum  shift 23
	IDnum  reduce 17
	DOTnum  reduce 17

	Type_rec  goto 24


15: shift/reduce conflict (shift 23, reduce 17) on LBRACnum
state 15
	Type : INTnum . Type_rec  (14)
	Type : INTnum . Type_rec DOTnum Type  (16)
	Type_rec : .  (17)

	LBRACnum  shift 23
	IDnum  reduce 17
	DOTnum  reduce 17

	Type_rec  goto 25


state 16
	FieldDecl : Type . FieldDecl_rec SEMInum  (46)

	IDnum  shift 26
	.  error

	FieldDecl_rec  goto 27
	FieldDecl_Id  goto 28
	VariableDeclId  goto 29


state 17
	Decls : DECLARATIONSnum FieldDecl_List . ENDDECLARATIONSnum  (42)
	FieldDecl_List : FieldDecl_List . FieldDecl  (45)

	IDnum  shift 14
	ENDDECLARATIONSnum  shift 30
	INTnum  shift 15
	.  error

	Type  goto 16
	FieldDecl  goto 31


state 18
	FieldDecl_List : FieldDecl .  (44)

	.  reduce 44


state 19
	MethodDecl : METHODnum . Type IDnum LPARENnum Formal_Parameter_List RPARENnum Block  (10)
	MethodDecl : METHODnum . VOIDnum $$1 IDnum LPARENnum Formal_Parameter_List RPARENnum Block  (12)

	IDnum  shift 14
	VOIDnum  shift 32
	INTnum  shift 15
	.  error

	Type  goto 33


state 20
	ClassBody : LBRACEnum Decls MethodDecl_List . RBRACEnum  (5)
	MethodDecl_List : MethodDecl_List . MethodDecl  (7)

	RBRACEnum  shift 34
	METHODnum  shift 19
	.  error

	MethodDecl  goto 35


state 21
	MethodDecl_List : MethodDecl_z1 .  (6)

	.  reduce 6


state 22
	MethodDecl_z1 : MethodDecl .  (9)

	.  reduce 9


state 23
	Type_rec : LBRACnum . RBRACnum  (18)

	RBRACnum  shift 36
	.  error


state 24
	Type : IDnum Type_rec .  (13)
	Type : IDnum Type_rec . DOTnum Type  (15)
	Type_rec : Type_rec . LBRACnum RBRACnum  (19)

	LBRACnum  shift 37
	DOTnum  shift 38
	IDnum  reduce 13


state 25
	Type : INTnum Type_rec .  (14)
	Type : INTnum Type_rec . DOTnum Type  (16)
	Type_rec : Type_rec . LBRACnum RBRACnum  (19)

	LBRACnum  shift 37
	DOTnum  shift 39
	IDnum  reduce 14


state 26
	VariableDeclId : IDnum .  (51)
	VariableDeclId : IDnum . BracketLoop  (52)

	LBRACnum  shift 40
	SEMInum  reduce 51
	COMMAnum  reduce 51
	EQUALnum  reduce 51

	BracketLoop  goto 41


state 27
	FieldDecl : Type FieldDecl_rec . SEMInum  (46)
	FieldDecl_rec : FieldDecl_rec . COMMAnum FieldDecl_Id  (48)

	SEMInum  shift 42
	COMMAnum  shift 43
	.  error


state 28
	FieldDecl_rec : FieldDecl_Id .  (47)

	.  reduce 47


state 29
	FieldDecl_Id : VariableDeclId .  (49)
	FieldDecl_Id : VariableDeclId . EQUALnum VariableInitializer  (50)

	EQUALnum  shift 44
	SEMInum  reduce 49
	COMMAnum  reduce 49


state 30
	Decls : DECLARATIONSnum FieldDecl_List ENDDECLARATIONSnum .  (42)

	.  reduce 42


state 31
	FieldDecl_List : FieldDecl_List FieldDecl .  (45)

	.  reduce 45


state 32
	MethodDecl : METHODnum VOIDnum . $$1 IDnum LPARENnum Formal_Parameter_List RPARENnum Block  (12)
	$$1 : .  (11)

	.  reduce 11

	$$1  goto 45


state 33
	MethodDecl : METHODnum Type . IDnum LPARENnum Formal_Parameter_List RPARENnum Block  (10)

	IDnum  shift 46
	.  error


state 34
	ClassBody : LBRACEnum Decls MethodDecl_List RBRACEnum .  (5)

	.  reduce 5


state 35
	MethodDecl_List : MethodDecl_List MethodDecl .  (7)

	.  reduce 7


state 36
	Type_rec : LBRACnum RBRACnum .  (18)

	.  reduce 18


state 37
	Type_rec : Type_rec LBRACnum . RBRACnum  (19)

	RBRACnum  shift 47
	.  error


state 38
	Type : IDnum Type_rec DOTnum . Type  (15)

	IDnum  shift 14
	INTnum  shift 15
	.  error

	Type  goto 48


state 39
	Type : INTnum Type_rec DOTnum . Type  (16)

	IDnum  shift 14
	INTnum  shift 15
	.  error

	Type  goto 49


state 40
	BracketLoop : LBRACnum . RBRACnum  (53)

	RBRACnum  shift 50
	.  error


state 41
	VariableDeclId : IDnum BracketLoop .  (52)
	BracketLoop : BracketLoop . LBRACnum RBRACnum  (54)

	LBRACnum  shift 51
	SEMInum  reduce 52
	COMMAnum  reduce 52
	EQUALnum  reduce 52


state 42
	FieldDecl : Type FieldDecl_rec SEMInum .  (46)

	.  reduce 46


state 43
	FieldDecl_rec : FieldDecl_rec COMMAnum . FieldDecl_Id  (48)

	IDnum  shift 26
	.  error

	FieldDecl_Id  goto 52
	VariableDeclId  goto 29


state 44
	FieldDecl_Id : VariableDeclId EQUALnum . VariableInitializer  (50)

	IDnum  shift 53
	LBRACEnum  shift 54
	LPARENnum  shift 55
	INTnum  shift 56
	PLUSnum  shift 57
	MINUSnum  shift 58
	NOTnum  shift 59
	ICONSTnum  shift 60
	SCONSTnum  shift 61
	.  error

	VariableInitializer  goto 62
	ArrayInitializer  goto 63
	ArrayCreationExpression  goto 64
	MethodCallStatement  goto 65
	Expression  goto 66
	Factor  goto 67
	UnsignedConstant  goto 68
	SimpleExpression  goto 69
	Term  goto 70
	Variable  goto 71


state 45
	MethodDecl : METHODnum VOIDnum $$1 . IDnum LPARENnum Formal_Parameter_List RPARENnum Block  (12)

	IDnum  shift 72
	.  error


state 46
	MethodDecl : METHODnum Type IDnum . LPARENnum Formal_Parameter_List RPARENnum Block  (10)

	LPARENnum  shift 73
	.  error


state 47
	Type_rec : Type_rec LBRACnum RBRACnum .  (19)

	.  reduce 19


state 48
	Type : IDnum Type_rec DOTnum Type .  (15)

	.  reduce 15


state 49
	Type : INTnum Type_rec DOTnum Type .  (16)

	.  reduce 16


state 50
	BracketLoop : LBRACnum RBRACnum .  (53)

	.  reduce 53


state 51
	BracketLoop : BracketLoop LBRACnum . RBRACnum  (54)

	RBRACnum  shift 74
	.  error


state 52
	FieldDecl_rec : FieldDecl_rec COMMAnum FieldDecl_Id .  (48)

	.  reduce 48


state 53
	Variable : IDnum . Variable_rec  (104)
	Variable_rec : .  (105)

	LBRACnum  shift 75
	DOTnum  shift 76
	SEMInum  reduce 105
	COMMAnum  reduce 105
	LBRACEnum  reduce 105
	RBRACEnum  reduce 105
	RBRACnum  reduce 105
	LPARENnum  reduce 105
	RPARENnum  reduce 105
	ASSGNnum  reduce 105
	LTnum  reduce 105
	LEnum  reduce 105
	EQnum  reduce 105
	NEnum  reduce 105
	GEnum  reduce 105
	GTnum  reduce 105
	PLUSnum  reduce 105
	MINUSnum  reduce 105
	ORnum  reduce 105
	TIMESnum  reduce 105
	DIVIDEnum  reduce 105
	ANDnum  reduce 105

	Variable_rec  goto 77
	Field  goto 78
	Index  goto 79

